# wash-lang-prototype

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  requirements.txt  runtests.sh  setup.cfg  setup.py
examples/: custom_chrome_configuration.wash  custom_firefox_configuration.wash  example.wash  example_definitions.wash
tools/windows/opera/operadriver_win64_90.0.4430.85/: sha512_sum
wash_lang_prototype/: wash.py
wash_lang_prototype/cli/: __init__.py  execute.py  validate.py  version.py
wash_lang_prototype/core/: common.py  configuration_entry_handler.py  configuration_handler.py  exceptions.py  executor.py  options.py  result.py
wash_lang_prototype/internal/: configuration_options.washy
wash_lang_prototype/lang/: __init__.py  wash.py  wash.tx  wash_internal.py  wash_internal.tx  wash_internal_object_processors.py  wash_object_processors.py
