[metadata]
name = wash_lang_prototype
author = Filip Ivkovic
author_email = fivkovic@uns.ac.rs
license = MIT
description = WASH DSL - Prototype
keywords = textX, DSL, web-automation, scraping
url = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = wash_lang_prototype.cli
zip_safe = False
install_requires =
    textX
include_package_data = True
package_dir =
    wash_lang_prototype = wash_lang_prototype

[options.extras_require]
cli =
    click >=8.0
dev =
    wheel
    twine
    click >=8.0
test =
    flake8
    tox
    coverage
    coveralls
    pytest
    click >=8.0

[options.package_data]
    wash_lang_prototype = *.tx

[options.entry_points]
textx_languages =
    wash = wash_lang_prototype:wash_language

wash_commands =
    version = wash_lang_prototype.cli.version:version

    # TODO: Add additional CLI commands here

console_scripts =
    wash = wash_lang_prototype.cli:wash_lang_prototype

    # NOTE: More info at
    # https://github.com/textX/textX/blob/ac99d92da2d9a5c5d85cf3ffaacb1779b4a5a0c2/docs/textx_command.md

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,.tox/*, build/*, dist/*, venv/*
max-line-length = 90